detectors/huggingface/deploy-simpler/isvc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: huggingface-hap-detector-external
  namespace: test
  annotations:
    haproxy.router.openshift.io/auth-type: "oauth"
spec:
  to:
    kind: Service
    name: huggingface-hap-detector-predictor
  port:
    targetPort: 8443
  tls:
    termination: reencrypt  # Use reencrypt since the service uses HTTPS (port 8443)
    insecureEdgeTerminationPolicy: Redirect
